tests/ui/parser/misspelled-keywords/use.stderr
error: expected one of `!` or `::`, found `a`
  --> $DIR/use.rs:1:6
   |
LL | usee a::b;
   |      ^ expected one of `!` or `::`

error: aborting due to 1 previous error

